--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <module>services/api_gateway</module>
 <!--        <module>services/history_service</module>-->
 <!--        <module>services/notification_service</module>-->
-<!--        <module>services/scheduling_service</module>-->
+        <module>services/scheduling_service</module>
     </modules>
 
     <dependencyManagement>
