--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,8 +1,66 @@
-version: "3.9"
+name: tech-challenge-03
+
 services:
+  service-registry:
+    build:
+      context: ..
+      dockerfile: services/registry_service/Dockerfile
+    image: tc3/service-registry:local
+    container_name: service-registry
+    ports:
+      - "8761:8761"
+    restart: unless-stopped
+    networks:
+      - app-network
+
+  gateway-service:
+    build:
+      context: ..
+      dockerfile: services/gateway_service/Dockerfile
+    image: tc3/gateway-service:local
+#    container_name: tc3-gateway-service
+    environment:
+      - SERVICE_REGISTRY_URL=http://service-registry:8761
+    ports:
+      - "8080:8080"
+    restart: unless-stopped
+    networks:
+      - app-network
+    links:
+      - service-registry:service-registry
+    depends_on:
+      - service-registry
+
+  postgres-auth:
+    image: postgres:latest
+#    container_name: tc3-postgres-auth
+    environment:
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+      - POSTGRES_DB=tech-challenge-03-auth
+    ports:
+      - "5433:5432"
+
+  auth-service:
+    build:
+      context: ..
+      dockerfile: services/auth_service/Dockerfile
+    image: tc3/auth-service:local
+#    container_name: tc3-auth-service
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-auth:5432/tech-challenge-03-auth
+      - SPRING_DATASOURCE_USERNAME=root
+      - SPRING_DATASOURCE_PASSWORD=root
+      - SPRING_DATASOURCE_DRIVERCLASSNAME=org.postgresql.Driver
+      - SERVICE_REGISTRY_URL=http://service-registry:8761
+    restart: unless-stopped
+    depends_on:
+      - service-registry
+      - postgres-auth
+
   rabbitmq:
     image: rabbitmq:3.13-management-alpine
-    container_name: tc3-rabbitmq
+#    container_name: tc3-rabbitmq
     ports:
       - "5672:5672"
       - "15672:15672"
@@ -21,7 +79,7 @@ services:
       context: ..
       dockerfile: services/api_gateway/Dockerfile
     image: tc3/api-gateway:local
-    container_name: tc3-api-gateway
+#    container_name: tc3-api-gateway
     environment:
       SPRING_RABBITMQ_HOST: rabbitmq
       SPRING_RABBITMQ_PORT: 5672
@@ -39,7 +97,7 @@ services:
       context: ..
       dockerfile: services/scheduling_service/Dockerfile
     image: tc3/scheduling-service:local
-    container_name: tc3-scheduling-service
+#    container_name: tc3-scheduling-service
     environment:
       SPRING_RABBITMQ_HOST: rabbitmq
       SPRING_RABBITMQ_PORT: 5672
@@ -51,3 +109,7 @@ services:
     ports:
       - "2003:2003"
     restart: unless-stopped
+
+networks:
+  app-network:
+    driver: bridge
