--- a/services/auth_service/pom.xml
+++ b/services/auth_service/pom.xml
@@ -9,8 +9,8 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>auth</artifactId>
-    <name>auth</name>
+    <artifactId>auth-service</artifactId>
+    <name>auth-service</name>
     <description>Authentication Service</description>
 
     <dependencies>
@@ -29,11 +29,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-            <version>4.3.0</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
