--- a/services/auth_service/src/main/resources/application.yml
+++ b/services/auth_service/src/main/resources/application.yml
@@ -5,39 +5,21 @@ spring:
   application:
     name: auth
 
-  cloud:
-    client:
-      hostname: localhost
-
   datasource:
     url: jdbc:postgresql://localhost:5433/tech-challenge-03-auth
     driver-class-name: org.postgresql.Driver
     username: root
     password: root
 
-  security:
-    oauth2:
-      client:
-        registration:
-          keycloak:
-            scope: openid
-            authorization-grant-type: authorization_code
-            provider: tech-challenge
-            client-secret: secret
-            client-id: tech-challenge-confidential
-
   flyway:
     enabled: true
     locations: classpath:db/migration
     baseline-on-migrate: true
 
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    serviceUrl:
-      defaultZone: ${SERVICE_REGISTRY_URL:http://localhost:8761/eureka/}
-
 jwt:
   public.key: classpath:app.pub
   private.key: classpath:app.key
+
+app:
+  security:
+    trustedHosts: ${TRUSTED_HOSTS:http://localhost}
