--- a/services/gateway_service/pom.xml
+++ b/services/gateway_service/pom.xml
@@ -9,19 +9,14 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>gateway</artifactId>
-    <name>gateway</name>
+    <artifactId>gateway-service</artifactId>
+    <name>gateway-service</name>
     <description>Application Gateway</description>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-gateway</artifactId>
-            <version>4.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <artifactId>spring-cloud-starter-gateway-server-webflux</artifactId>
             <version>4.3.0</version>
         </dependency>
     </dependencies>
