--- a/services/gateway_service/src/main/resources/application.yml
+++ b/services/gateway_service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8080
 
 spring:
   application:
@@ -9,30 +9,21 @@ spring:
       server:
         webflux:
           locator:
-            enabled: true
+            enabled: false
             lowerCaseServiceId: true
           routes:
             - id: auth
-              uri: lb://auth
+              uri: ${AUTH_MS_URL:http://localhost:8081}
               predicates:
                 - Path=/auth/**
               filters:
                 - StripPrefix=1
             - id: test
-              uri: lb://test
+              uri: ${TEST_MS_URL:http://localhost:8082}
               predicates:
                 - Path=/test/**
               filters:
                 - StripPrefix=1
-#    client:
-#      hostname: localhost
-
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    serviceUrl:
-      defaultZone: ${SERVICE_REGISTRY_URL:http://localhost:8761/eureka/}
 
 logging:
   level:
