--- a/services/scheduling_service/pom.xml
+++ b/services/scheduling_service/pom.xml
@@ -65,6 +65,10 @@
 			<version>1.18.36</version>
 			<optional>true</optional>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
