--- a/services/scheduling_service/src/main/resources/application.yml
+++ b/services/scheduling_service/src/main/resources/application.yml
@@ -28,3 +28,6 @@ spring:
     port: ${SPRING_RABBITMQ_PORT:5672}
     username: ${SPRING_RABBITMQ_USERNAME:user}
     password: ${SPRING_RABBITMQ_PASSWORD:123456}
+app:
+  services:
+    auth: ${AUTH_MS_URL:http://localhost:8081}
