--- a/services/scheduling_service/src/main/resources/application.yml
+++ b/services/scheduling_service/src/main/resources/application.yml
@@ -31,3 +31,4 @@ spring:
 app:
   services:
     auth: ${AUTH_MS_URL:http://localhost:8081}
+    history: ${HISTORY_MS_URL:http://localhost:2002/graphql}
