--- a/services/scheduling_service/pom.xml
+++ b/services/scheduling_service/pom.xml
@@ -13,7 +13,6 @@
 	<name>scheduling_service</name>
 	<description>Scheduling Service</description>
 
-
 	<dependencies>
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -70,8 +69,8 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.graphql</groupId>
-            <artifactId>spring-graphql</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-graphql</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
