--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
         <module>services/auth_service</module>
         <module>services/test_service</module>
         <module>services/api_gateway</module>
-<!--        <module>services/history_service</module>-->
-<!--        <module>services/notification_service</module>-->
+        <module>services/history_service</module>
+        <module>services/notification_service</module>
         <module>services/scheduling_service</module>
     </modules>
 
